--- a/views/newarrivals.ejs
+++ b/views/newarrivals.ejs
@@ -509,7 +509,7 @@
         <ul class="pagination">
           <li class="page-item"><a class="page-link" href="#">Previous</a></li>
           <% for(var i = 0; i < numPage; i++) {%>
-            <li class="page-item"><a class="page-link" href="#"><%= i+1 %></a></li>
+            <li class="page-item"><a class="page-link" href="/newarrivals/page=<%= i+1 %>"><%= i+1 %></a></li>
             <%}%>
           <li class="page-item"><a class="page-link" href="#">Next</a></li>
         </ul>
