--- a/views/newarrivals.ejs
+++ b/views/newarrivals.ejs
@@ -425,6 +425,13 @@
         .pagination{
             margin-left: 10px;
         }
+        .grid-container > .card.h-100 > .card-img-top{
+            transition: 0.3s;
+        }
+
+        .card-img-top:hover {
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.25), 0 6px 20px 0 rgba(0, 0, 0, 0.25);
+        }
     </style>
 </head>
 
