--- a/views/productdetail.ejs
+++ b/views/productdetail.ejs
@@ -260,6 +260,15 @@
             -webkit-animation: ripple 1.0s linear infinite;
             animation: ripple 1.0s linear infinite;
         }
+
+        .flex-container > .flex-item {
+            transition: 0.3s;
+        }
+
+        .flex-item:hover {
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.25), 0 6px 20px 0 rgba(0, 0, 0, 0.25);
+        }
+
     </style>
 </head>
 
