--- a/views/index.ejs
+++ b/views/index.ejs
@@ -440,6 +440,14 @@
                 left: 0px;
             }
         }
+
+        .grid-container > .card.h-100 > .card-img-top{
+            transition: 0.3s;
+        }
+
+        .card-img-top:hover {
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.25), 0 6px 20px 0 rgba(0, 0, 0, 0.25);
+        }
     </style>
 </head>
 
