update cart page

--- a/views/productdetail.ejs
+++ b/views/productdetail.ejs
@@ -19,14 +19,14 @@
 
         .flex-container > div {
             background-color: #f1f1f1;
-            width: 150px;
+            width: 135px;
             margin: 2.5px;
             text-align: center;
-            line-height: 50px;
+            line-height: 35px;
             font-size: 30px;
         }
         .flex-container > div > .flex-item {
-            width: 100%;
+            width: 85%;
             height: auto;
         }
         .container {
@@ -268,6 +268,71 @@
         .flex-item:hover {
             box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.25), 0 6px 20px 0 rgba(0, 0, 0, 0.25);
         }
+        .pt-1{
+            font-size: 15px;
+            margin-bottom: 15px;
+            border: 1px dashed #ffffff;
+            border-radius: 3px;
+            background: #f5f5f5;
+            padding: 10px;
+            margin-top: 15px;
+        }
+
+        .hotline-ho-tro {
+            font-size: 14px;
+            border: 1px solid rgb(224, 209, 209);
+            padding: 20px 10px;
+            border-radius: 3px;
+            text-align: center;
+        }
+        .hotline-ho-tro2 {
+            font-size: 14px;
+            border: 1px solid rgb(224, 209, 209);
+            padding: 5px 5px;
+            border-radius: 3px;
+            text-align: center;
+        }
+
+        .hotline-ho-tro .info-hotline {
+            text-transform: uppercase;
+            display: block;
+            font-weight: 500;
+            margin-bottom: 10px;
+        }
+
+        .icon-box-left > .icon-box-img > .icon-box-text {
+            padding-left: 1em;
+        }
+
+        /* Style tab links */
+        .tablink {
+            background-color: rgb(190, 185, 185);
+            color: white;
+            float: left;
+            border: none;
+            outline: none;
+            cursor: pointer;
+            font-size: 17px;
+            width: 20%;
+            height: 40px;
+            text-align: center;
+        }
+
+        .tablink:hover {
+            background-color:rgb(151, 10, 10);
+        }
+
+        /* Style the tab content (and add height:100% for full page content) */
+        .tabcontent {
+            color: black;
+            display: none;
+            padding: 50px 20px;
+            height: 100%;
+        }
+
+        #Home {background-color: white;}
+        #News {background-color: white;}
+        #Contact {background-color: white;}
 
     </style>
 </head>
@@ -310,16 +375,16 @@
     </div>
     <div class="container">
         <form method="POST" action="/buynow/<%= product[0]._id %>">
-            <section class="mb-5">
+            <section class="mb-4">
                 <div class="row">
-                    <div class="col-md-6 mb-4 mb-md-0">
+                    <div class="col-md-5 mb-4 mb-md-0">
                         <div id="mdb-lightbox-ui"></div>
                         <div class="mdb-lightbox">
                             <div class="row product-gallery mx-1">
                                 <div class="col-12 mb-0">
                                     <figure class="view overlay rounded z-depth-1 main-img">
                                         <a width="550" height="600">
-                                            <img src="<%= product[0].image%>" id="current-img" class="img-fluid z-depth-1" width="550" height="600" style="width: 100%; height: auto;">
+                                            <img src="<%= product[0].image%>" id="current-img" class="img-fluid z-depth-1" width="550" height="600" style="width: 90%; height: auto;">
                                         </a>
                                     </figure>
                                 </div>
@@ -334,7 +399,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                         <p class="mb-2 text-muted text-uppercase small">
                             <%= product[0].name %>
                         </p>
@@ -345,7 +410,11 @@
                             <% } %>
 
                         <p class="pt-1">
-                            <%= product[0].description %>
+                            <em>
+                                <strong>
+                                    <%= product[0].slogan%>
+                                </strong>
+                            </em>
                         </p>
                         <hr>
                         <div class="table-responsive mb-2">
@@ -365,16 +434,13 @@
                                             <div class="form-check">
                                                 <input type="radio" class="form-check-input" id="small" name="radSize" value="S">
                                                 <label class="form-check-label" for="small">S</label>
-                                            </div>
-                                            <div class="form-check">
+
                                                 <input type="radio" class="form-check-input" id="medium" name="radSize" value="M">
                                                 <label class="form-check-label" for="medium">M</label>
-                                            </div>
-                                            <div class="form-check">
+
                                                 <input type="radio" class="form-check-input" id="large" name="radSize" value="L" checked>
                                                 <label class="form-check-label" for="large">L</label>
-                                            </div>
-                                            <div class="form-check">
+
                                                 <input type="radio" class="form-check-input" id="xlarge" name="radSize" value="XL">
                                                 <label class="form-check-label" for="xlarge">XL</label>
                                             </div>
@@ -392,11 +458,61 @@
                         <a href="" class="btn btn-primary btn-md mr-1 mb-2" id="addtocart" style="background-color: #111;">
                         <i class="fas fa-shopping-cart pr-2"></i>Thêm vào giỏ hàng</a>
                     </div>
+                    <div class="col-md-3">
+                        <div class="hotline-ho-tro">
+                            <span class="info-hotline">Gọi ngay để được tư vấn</span>  
+                            <span class="info2-hotline">Hotline tư vấn</span><br>
+                            <strong style="color: red; font-size: 20px;">0862.263.986</strong>
+                        </div>
+                        <br>
+                        <div class="hotline-ho-tro2">
+                            <p><strong>Miễn phí vận chuyển</strong></p>
+                            <p><span style="font-size: 90%;">Đơn hàng từ 500.000đ</span></p>   
+                        </div>
+                        <br>
+                        <div class="hotline-ho-tro2">
+                            <p><strong>Bảo hành trọn đời sản phẩm</strong></p>
+                            <p><span style="font-size: 90%;">chính hãng LEAGUE STORE</span></p>   
+                        </div>
+                        <br>
+                        <div class="hotline-ho-tro2">
+                            <p><strong>30 ngày hoàn tiền</strong></p>
+                            <p><span style="font-size: 90%;">nếu lỗi do nhà sản xuất</span></p>   
+                        </div>
+                    </div>
                 </div>
             </section>
         </form>
         <br>   
     </div>
+    <div class="container">
+        <button class="tablink" onclick="openPage('Describe', this, 'rgb(151, 10, 10)')" id="defaultOpen">MÔ TẢ</button>
+        <button class="tablink" onclick="openPage('MoreInformation', this, 'rgb(151, 10, 10)')" >THÔNG TIN BỔ SUNG</button>
+        <button class="tablink" onclick="openPage('Vote', this, 'rgb(151, 10, 10)')">ĐÁNH GIÁ (0) </button>
+
+        <div id="Describe" class="tabcontent">
+        <p>
+            – Áo thun <strong><%= product[0].name %></strong> Made By League Store <br> 
+            * Chất liệu: 100% Sợi Sorona của Dupont <br>
+            * Form áo regular fit, phù hợp với mọi dáng người <br>
+            * Tay áo và cổ áo được dệt riêng có cài sợi Spandex để đảm bảo độ đàn hồi và chống bai, nhão qua các lần giặt <br>
+            * Thấm hút và nhanh khô để bạn luôn cảm thấy thoải mái và tự tin <br>
+            <strong>– LƯU Ý: </strong><br>
+            + Màu sắc sản phẩm có thể sẽ chênh lệch thực tế một phần nhỏ, do ảnh hưởng về độ lệch màu của ánh sáng nhưng vẫn đảm bảo chất lượng. <br>
+            + Nếu có bất kỳ khiếu nại cần Shop hỗ trợ về sản phẩm, khi mở sản phẩm Quý khách vui lòng quay lại video quá trình mở sản phẩm để được đảm bảo 100% đổi lại sản phẩm mới nếu Shop giao bị lỗi.<br>
+            + Quý khách nhận được sản phẩm, vui lòng đánh giá giúp Shop để hưởng thêm nhiều ưu đãi hơn nhé!
+        </p>
+        </div>
+
+        <div id="MoreInformation" class="tabcontent">
+        <p><strong>Size: </strong>S, M, L, XL</p> 
+        </div>
+
+        <div id="Vote" class="tabcontent">
+        <h3>Đánh giá</h3>
+        <p>Hiện chưa có đánh giá nào.</p>
+        </div>             
+    </div>   
     <!-- Modal -->
     <div class="modal fade" id="modal-size-guide" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
@@ -452,6 +568,23 @@
                 _img.src = img.src;
             }
         }
+
+        function openPage(pageName,elmnt,color) {
+            var i, tabcontent, tablinks;
+            tabcontent = document.getElementsByClassName("tabcontent");
+            for (i = 0; i < tabcontent.length; i++) {
+                tabcontent[i].style.display = "none";
+            }
+            tablinks = document.getElementsByClassName("tablink");
+            for (i = 0; i < tablinks.length; i++) {
+                tablinks[i].style.backgroundColor = "";
+            }
+            document.getElementById(pageName).style.display = "block";
+            elmnt.style.backgroundColor = color;
+        }
+
+        // Get the element with id="defaultOpen" and click on it
+        document.getElementById("defaultOpen").click();
     </script>
     <footer>
         <%- include('footer')%>
