--- a/views/slideshow.ejs
+++ b/views/slideshow.ejs
@@ -1,12 +1,17 @@
 <style>
     .item img{
-        width: 100%;
+        
+    }
+    .carousel.slide > .carousel-inner > img{
+        height: 75%;
+        position: fixed;
+        margin-top: 100px;
     }
 </style>
 <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner" >
         <div class="item active">
-            <img src="/banner/bn1.jpg" style="width: 100%;">
+            <img src="/banner/bn1.jpg" style="width: 100%; ">
         </div>
         <div class="item">
             <img src="/banner/bn2.jpg" style="width: 100%;">
@@ -15,11 +20,11 @@
             <img src="/banner/bn3.png" style="width: 100%;">
         </div>
     </div>  
-    <a class="left carousel-control" role="button" data-slide="prev">
+    <a class="left carousel-control" role="button" href="#carouselIndicators" data-slide="prev">
         <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
     </a>
-    <a class="right carousel-control" role="button" data-slide="next">
+    <a class="right carousel-control" role="button" href="#carouselIndicators" data-slide="next">
         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
     </a>
