--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -143,7 +143,7 @@
                 <div class="col-md-5">
                     <h4 style="text-align: left;">THÔNG TIN THANH TOÁN</h4>
                     <span>Bạn có mã ưu đãi?
-                        <input type="text"></input>
+                        <input id="offCode" type="text"></input>
                     </span>
                     <hr>
                     <div class="form-group">
@@ -214,7 +214,7 @@
                         </div>
                         <hr>
                         <div class="form-check" >
-                            <input type="radio" class="form-check-input" id="small" name="radSize" value="bank" checked>
+                            <input type="radio" class="form-check-input" id="small" name="purchase" value="bank" checked>
                             <label class="form-check-label" for="small">Chuyển khoản ngân hàng</label>
                             <br>
                             <p style="text-align: left;">
@@ -222,7 +222,7 @@
                                 Vui lòng sử dụng Mã đơn hàng của bạn trong phần Nội dung thanh toán. 
                                 Đơn hàng sẽ đươc giao sau khi tiền đã chuyển.
                             </p>
-                            <input type="radio" class="form-check-input" id="medium" name="radSize" value="directly">
+                            <input type="radio" class="form-check-input" id="medium" name="purchase" value="directly">
                             <label class="form-check-label" for="medium" style="text-align: left;">Thanh toán trực tiếp</label>
                         </div>
                         <br>
