--- a/views/order.ejs
+++ b/views/order.ejs
@@ -1,3 +1,4 @@
+<!--CART page-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,67 +9,222 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+    <style>
+        .bill-temp {
+            font-size: 14px;
+            border: 2px solid rgb(185, 41, 41);
+            padding: 20px 20px ;
+            border-radius: 3px;
+            text-align: center;
+        }
+        .container {
+            align-items: center;
+        }
+        
+        .product-item {
+            margin-top: 5px;
+        }
+        
+        .new_product {
+            font-weight: bold;
+            text-align: center;
+        }
+        .new_product > a{
+            font-weight: bold;
+            color: black;
+        }
+        .new_product:hover a{
+            color: coral;
+        }
+        
+        .populate_product {
+            text-align: center;
+            font-weight: bold;
+        }
+
+        .populate_product > a{
+            font-weight: bold;
+            color: black;
+        }
+
+        .populate_product:hover a{
+            color: coral;
+        }
+        
+        footer {
+            text-align: center;
+            padding: 3px;
+            background-color: #111;
+            color: white;
+            bottom: 0rem;
+            position: relative;
+            width: 100%;
+            opacity: calc();
+        }
+        
+        .card-img-top {
+            width: 100%;
+            height: 15vw;
+            object-fit: cover;
+            margin-top: 5px;
+        }
+        
+        .carousel-inner>.item>img,
+        .carousel-inner>.item>a>img {
+            width: 70%;
+            margin: auto;
+        }
+        
+        .line-through {
+            text-decoration: line-through;
+        }
+        
+        .none {
+            color: coral;
+        }
+        
+        img.hover-shadow {
+            transition: 0.3s;
+        }
+
+        .card-img-top.img-responsive.hover-shadow {
+            transition: 0.3s;
+        }
+        
+        .hover-shadow:hover {
+            box-shadow: 0 4px 8px 0 rgba(243, 238, 238, 0.2), 0 6px 20px 0 rgba(231, 221, 221, 0.19);
+        }
+
+        #topbar {background: #7F7F7F ;font-size: 12px; color: #FFFF}
+        #topbar-down {background: #faf4f4 ;font-size: 14px; color: rgb(221, 207, 207)}
+        #topbar p {padding: 4px 0;margin-bottom:0;}
+        #topbar-down p {padding: 4px 0;margin-bottom:0;}
+        .topbar-hotline a.phone-num { display: inline-block;}
+        .topbar-hotline {text-align: right;margin: 3.5px 0 0;}
+        .topbar-hotline span.text-phone{color:#FFFF;font-weight:bold;letter-spacing:0.4px;}
+        .topbar-hotline span.circle-phone{
+            display: inline-block;border-radius: 50%;
+            -webkit-animation: ripple 1.0s linear infinite;
+            animation: ripple 1.0s linear infinite;
+        }
+        .form-check-input{
+            left: 35px;
+            position: absolute;
+        }
+        .form-check-label{
+            left: 55px;
+            position: absolute;
+        }
+
+        .form-control{
+            border: 1px solid rgb(202, 30, 30);
+        }
+    </style>
   </head>
   <body>
-    <h1 style="text-align: center;">ĐƠN HÀNG CỦA BẠN</h1>
-    <% if(bill !== undefined) {%>
-      <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
-          <label>Khách hàng: <%= bill.name%></label><br>
-          <label>Email: <%= bill.email%></label><br>
-          <label>Điện thoại: <%= bill.phone%></label><br>
-          <label>Địa chỉ: <%= bill.address%></label><br>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
-            <div class="list-group">
-                <table class="table table-bordered">
-                    <thead class="thead-dark">
-                        <tr>
-                            <th scope="col">Tên sản phẩm</th>
-                            <th scope="col">Size</th>
-                            <th scope="col">Số lượng</th>
-                            <th scope="col">Thành tiền</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <% var i = 0; %>
-                        <% var products = [];
-                          products = bill.cart.generateArray();
-                          products.forEach(function (product) {
-                        %>
-                            <tr>
-                                <td>
-                                    <strong><%= product.item.name %></strong>
-                                </td>
-                                <td>
-                                    <strong><%= product.size %></strong>
-                                </td>
-                                <td>
-                                    <span class="total"><%= product.qty %></span>
-                                </td>
-                                <td>
-                                    <span class="badge price-cart"><%= product.price %></span>
-                                </td>
-                            </tr>
-                        <% }); %>
-                    </tbody>
-                </table>
+    <%- include('header');%>
+    <div id="topbar-down">
+        <div class="container-fluid" style="margin-left: 20px;">
+            <div class="row">
+                <div class="col-md-6 col-sm-6 col-xs-12 topbar-content">
+                  <p>
+                    <a href="/">Trang chủ</a> / Chi tiết đơn hàng
+                  </p>
+                </div>
             </div>
         </div>
-      </div>
-      <div class="row">
-          <div class="col-md-2"></div>
-          <div class="col-md-8">
-              <strong>Tổng: <%= bill.cart.totalPrice.toLocaleString('it-IT', {style : 'currency', currency : 'VND'}); %> </strong>
-          </div>
-      </div>
-        
-    <%} else {%>
-      <a href="/" class="btn btn-primary">Home</a>
-    <% } %>
+    </div>
+    <br>
+    <div class="container">
+      <% if(bill) {%>
+        <div class="row">
+            <div class="col-md-2"></div>
+            <div class="col-md-6">
+              <span>
+                <%= bill.paymentState %>
+              </span>
+              <h4 style="text-align: left; font-size: 20">Chi tiết đơn hàng</h4>    
+              <div class="row" style="font-size: 16px;">
+                <div class="col-md-4" style="text-align: left;">
+                    <strong>SẢN PHẨM</strong>
+                </div>
+                <div style="text-align: right;">
+                    <strong>TỔNG</strong>
+                </div>
+              </div>
+              <hr>
+              <% var i = 0; %>
+                  <% var products = [];
+                    products = bill.cart.generateArray();
+                    products.forEach(function (product) {
+                  %>
+                  <div class="row" style="font-size: 16px;">
+                    <div class="col-md-4" style="text-align: left;">
+                    <%= product.item.name%> - <%=product.size%> x <%= product.qty%>
+                    </div>    
+                    <div style="text-align: right;">
+                      <%= product.price.toLocaleString('it-IT', {style : 'currency', currency : 'VND'});%>
+                    </div>
+                  </div>     
+              <% }); %>
+              <hr>
+              <div class="row" style="font-size: 16px;">
+                <div class="col-md-4" style="text-align: left;">
+                    <strong>Tổng số phụ:</strong>
+                </div>
+                <div style="text-align: right;">
+                    <%= bill.cart.totalPrice.toLocaleString('it-IT', {style : 'currency', currency : 'VND'}); %>
+                </div>
+              </div>
+              <hr>
+              <div class="row" style="font-size: 16px;">
+                <div class="col-md-4" style="text-align: left;">
+                    <strong>Giao nhận hàng:</strong>
+                </div>
+                <div style="text-align: right;">
+                    %= bill.deliveryFee.toLocaleString('it-IT', {style : 'currency', currency : 'VND'}); %>
+                </div>
+              </div>
+              <hr>
+              
+              <div class="row" style="font-size: 16px;">
+                <div class="col-md-4" style="text-align: left;">
+                    <strong>Phương thức thanh toán:</strong>
+                </div>
+                <div style="text-align: right;">
+                  <%= bill.paymentState %>
+                </div>
+              </div>
+              <hr>
+              
+              <div class="row" style="font-size: 16px;">
+                <div class="col-md-4" style="text-align: left;">
+                    <strong>Tổng cộng:</strong>
+                </div>
+                <div style="text-align: right;">
+                  <strong><%= (bill.cart.totalPrice + bill.deliveryFee).toLocaleString('it-IT', {style : 'currency', currency : 'VND'}); %></strong>
+                </div>
+              </div>
+              <hr>
+
+            </div>
+            </div>
+        </div>
+      <% } else {%>
+        <a href="/" class="btn btn-primary">Home</a>
+      <% } %>
+    </div>
+    <br>
+    <% if(bill) {%>
+      <footer>
+        <%- include('footer'); %>
+      </footer>
+    <%}else {%>
+      <footer style="position: fixed;">
+        <%- include('footer'); %>
+      </footer>
+    <%}%>
   </body>
+  
 </html>
