--- a/views/news.ejs
+++ b/views/news.ejs
@@ -304,7 +304,7 @@
         <h3>TẤT CẢ BÀI VIẾT</h3>
         <p>Hiện tại chưa có bài viết nào!</p>
     </div>
-    <footer>
+    <footer style="position: fixed;">
         <%- include('footer'); %>
     </footer>
   </body>
