--- a/views/guide-policy/guide-bankaccount.ejs
+++ b/views/guide-policy/guide-bankaccount.ejs
@@ -32,7 +32,7 @@
           <div class="row">
               <div class="col-md-6 col-sm-6 col-xs-12 topbar-content">
                 <p>
-                  <a href="/">Trang chủ</a> / Hướng dẫn chọn size
+                  <a href="/">Trang chủ</a> / Hướng dẫn thanh toán qua ngân hàng
                 </p>
               </div>
           </div>
